# ChamEngine

./: CMakeLists.txt  ChamEngine.sln  ChamEngineFixed.sln  ChamEngineFixed.vcxproj  ChamEngineFixed.vcxproj.filters  README.md  main.c
Engine/: ChamEngine.h  GameController.c  InputHandlerDef.c
Engine/GameObject/: GameObject.h  GameObjectDef.c
Engine/GameObject/Colliders/: Collider.h
Engine/GameObject/Transform/: TranformDef.c  Transform.h  Window.h
Engine/Input/: InputHandler.h
Test/: Test.vcxproj  Test.vcxproj.filters  main.c
Test/Debug/: vc142.idb
Test/Debug/Test.tlog/: Test.lastbuildstate
Test/Engine/: ChamEngine.h  GameController.c
Test/Engine/GameObject/: GameObjectDef.c
Test/Engine/GameObject/Colliders/: Collider.h
Test/Engine/GameObject/Transform/: TranformDef.c
Test/x64/Debug/: CodeAnalysisResultManifest.txt  GameController.nativecodeanalysis.sarif  GameObjectDef.nativecodeanalysis.sarif  Test.exe.recipe  TranformDef.nativecodeanalysis.sarif  main.nativecodeanalysis.sarif  vc142.idb
Test/x64/Debug/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
x64/Debug/: ChamEngineFixed.exe.recipe  ChamEngineFixed.ilk  ChamEngineFixed.vcxproj.FileListAbsolute.txt  Test.ilk  vc142.idb
x64/Debug/ChamEngineFixed.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ChamEngineFixed.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
